refactor(temp-service): remove grps-echo module and update routes to call user-service via gRPC
