# app/temp-service/docs/swagger.json
@@ -7,7 +7,7 @@
     },
     "basePath": "/api/temp-service",
     "paths": {
-        "/v1/echo-user": {
+        "/v1/call-user-service-with-grpc": {
             "get": {
                 "produces": [
                     "application/json"
@@ -15,7 +15,7 @@
                 "tags": [
                     "Temp"
                 ],
-                "summary": "Call user-service Echo via gRPC",
+                "summary": "Call user-service via gRPC",
                 "parameters": [
                     {
                         "type": "string",
